// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea renders should Textarea renders 1`] = `
<DocumentFragment>
  <section
    class="textareaContainer"
  >
    <label
      class="small_filters label required"
      for="formId-name"
      other=""
    >
      Some Label
    </label>
    <div
      class="textareaWrapper someClass"
    >
      <textarea
        autocomplete="off"
        class="textarea anotherClass"
        data-testid="textarea"
        id="formId-name"
        name="name"
        placeholder="Some placeholder"
        type="text"
      />
    </div>
  </section>
</DocumentFragment>
`;

exports[`Textarea renders should Textarea renders with counter 1`] = `
<DocumentFragment>
  <section
    class="textareaContainer"
  >
    <label
      class="small_filters label required"
      for="formId-name"
      other=""
    >
      Some Label
    </label>
    <div
      class="textareaWrapper someClass"
    >
      <textarea
        autocomplete="off"
        class="textarea anotherClass"
        data-testid="textarea"
        id="formId-name"
        maxlength="125"
        name="name"
        placeholder="Some placeholder"
        type="text"
      />
      <span
        class="counter"
      >
        0/125
      </span>
    </div>
  </section>
</DocumentFragment>
`;
